# opus-blocks

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
docs/: PRD.md  agent-contract.md  data-model.md  evaluation-plan.md  frontend-implementation-spec.md  frontend-manual-test.md  frontend-phase-1-checkpoint.md  frontend-phase-2-checkpoint.md  frontend-plan.md  frontend.md  golden-baseline-v0.json  golden-dataset-sample.json  golden-dataset-v0.json  grounded-generation-contract.md  implementation-plan.md  operational-plan.md  paragraph-manuscript-spec.md  safety-spec.md  system-architecture.md  troubleshooting.md
frontend/: Dockerfile  entrypoint.sh  index.html  package-lock.json  package.json  vite.config.js
scripts/: backfill_embeddings.py  run_golden_set.py  run_metrics_snapshot.py  run_openai_smoke.py
tests/: conftest.py  test_agent_contracts.py  test_auth.py  test_circuit_breaker.py  test_documents.py  test_embeddings.py  test_evaluation_metrics.py  test_evaluation_regression.py  test_evaluation_runner.py  test_fact_suggestions.py  test_facts.py  test_golden_cli.py  test_golden_dataset_v0.py  test_health.py  test_llm_contract_enforcement.py  test_llm_provider_selection.py  test_llm_provider_wiring.py  test_llm_retry.py  test_metrics.py  test_migrations.py  test_openai_provider.py  test_openai_task_flow.py  test_paragraph_jobs.py  test_paragraph_view.py  test_paragraph_worker.py  test_paragraphs.py  test_retrieval_stub.py  test_runs.py  test_schema_tables.py  (+2 more)
(+121 files in other folders)
